MVP: Changed Check to work with Yup

--- a/user-onboarding/src/components/form.css
+++ b/user-onboarding/src/components/form.css
@@ -39,6 +39,10 @@
     border-color: #e57373;
 }
 
+.form-group checkbox{
+
+}
+
 .submit-button {
     display: inline-block;
     padding: 10px 14px;
